[package]
name = "cargo-rbmt"
version = "0.4.1"
authors = ["Nick Johnson <nick@yonson.dev>"]
description = "Maintainer tools for rust-bitcoin projects"
repository = "https://git.rust-bitcoin.org/rust-bitcoin/rust-bitcoin-maintainer-tools"
keywords = ["bitcoin"]
categories = ["development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85.0"
exclude = ["api-test-cases", "msrv-test-cases"]

[[bin]]
name = "cargo-rbmt"
path = "src/main.rs"

[dependencies]
xshell = "0.2.7"
clap = { version = "4.5", features = ["derive", "std", "help"], default-features = false }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.8"
toml_edit = { version = "0.22.7", features = ["serde"] }
public-api = { version = "0.50", default-features = false }

[lints]
workspace = true
