[package]
name = "forge"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
sha2 = "0.10"
dirs = "5.0"
