[workspace]
members = ["internal"]

[package]
name = "api-test-cases"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["api"]

[dependencies]
internal = { path = "internal" }

[package.metadata.rbmt]
api = { enabled = true, snapshot = true, private = ["internal"] }
toolchains = { nightly = "nightly-2026-05-04" }
