[workspace]

[package]
name = "higher-msrv-dep"
version = "0.1.0"
edition = "2021"
# The code in this package requires 1.70.0.
rust-version = "1.70.0"
publish = false

[dependencies]
serde = { version = "1.0", optional = true }

[features]
# Cargo MSRV dependent syntax which requires 1.60.0.
with-derive = ["serde?/derive"]
